tests/cli/snapshots/cli__list_mutants_well_tested.snap
---
source: tests/cli/main.rs
assertion_line: 73
expression: "String::from_utf8_lossy(&output.stdout)"
---
src/arc.rs:3: replace return_arc -> Arc<String> with Arc::new(String::new())
src/arc.rs:3: replace return_arc -> Arc<String> with Arc::new("xyzzy".into())
src/inside_mod.rs:3: replace outer::inner::name -> &'static str with ""
src/inside_mod.rs:3: replace outer::inner::name -> &'static str with "xyzzy"
src/methods.rs:16: replace Foo::double with ()
src/methods.rs:22: replace <impl Display for Foo>::fmt -> fmt::Result with Ok(Default::default())
src/methods.rs:28: replace <impl Debug for &Foo>::fmt -> fmt::Result with Ok(Default::default())
src/nested_function.rs:1: replace has_nested -> u32 with 0
src/nested_function.rs:1: replace has_nested -> u32 with 1
src/nested_function.rs:2: replace has_nested::inner -> u32 with 0
src/nested_function.rs:2: replace has_nested::inner -> u32 with 1
src/numbers.rs:1: replace double_float -> f32 with 0.0
src/numbers.rs:1: replace double_float -> f32 with 1.0
src/numbers.rs:1: replace double_float -> f32 with -1.0
src/result.rs:5: replace simple_result -> Result<&'static str, ()> with Ok("")
src/result.rs:5: replace simple_result -> Result<&'static str, ()> with Ok("xyzzy")
src/result.rs:9: replace error_if_negative -> Result<(), ()> with Ok(())
src/result.rs:17: replace result_with_no_apparent_type_args -> std::fmt::Result with Ok(Default::default())
src/sets.rs:3: replace make_a_set -> BTreeSet<String> with BTreeSet::new()
src/sets.rs:3: replace make_a_set -> BTreeSet<String> with BTreeSet::from_iter([String::new()])
src/sets.rs:3: replace make_a_set -> BTreeSet<String> with BTreeSet::from_iter(["xyzzy".into()])
src/simple_fns.rs:7: replace returns_unit with ()
src/simple_fns.rs:12: replace returns_42u32 -> u32 with 0
src/simple_fns.rs:12: replace returns_42u32 -> u32 with 1
src/simple_fns.rs:17: replace divisible_by_three -> bool with true
src/simple_fns.rs:17: replace divisible_by_three -> bool with false
src/simple_fns.rs:26: replace double_string -> String with String::new()
src/simple_fns.rs:26: replace double_string -> String with "xyzzy".into()
src/struct_with_lifetime.rs:14: replace Lex<'buf>::buf_len -> usize with 0
src/struct_with_lifetime.rs:14: replace Lex<'buf>::buf_len -> usize with 1

