tests/cli/snapshots/cli__list_mutants_well_tested_examine_name_filter.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
src/nested_function.rs:1: replace has_nested -> u32 with Default::default()
src/nested_function.rs:2: replace has_nested::inner -> u32 with Default::default()

