tests/cli/snapshots/cli__list_mutants_well_tested_exclude_folder_filter.snap
---
source: tests/cli/main.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
src/methods.rs:1: replace double -> usize with 0
src/methods.rs:1: replace double -> usize with 1

