tests/cli/snapshots/cli__mutants.json.snap
---
source: tests/cli/main.rs
expression: mutants_json
---
[
  {
    "package": "cargo-mutants-testdata-factorial",
    "file": "src/bin/factorial.rs",
    "line": 1,
    "function": "main",
    "return_type": "",
    "replacement": "()",
    "genre": "FnValue"
  },
  {
    "package": "cargo-mutants-testdata-factorial",
    "file": "src/bin/factorial.rs",
    "line": 7,
    "function": "factorial",
    "return_type": "-> u32",
    "replacement": "Default::default()",
    "genre": "FnValue"
  }
]
