tests/cli/snapshots/cli__mutants_are_unapplied_after_testing_so_later_missed_mutants_are_found.snap
---
source: tests/cli/main.rs
expression: stdout
---
Found 9 mutants to test
Unmutated baseline ... ok
src/a.rs:2:5: replace one -> i32 with 1 ... NOT CAUGHT
src/b.rs:2:5: replace one_untested -> i32 with 0 ... NOT CAUGHT
src/b.rs:2:5: replace one_untested -> i32 with 1 ... NOT CAUGHT
src/b.rs:2:5: replace one_untested -> i32 with -1 ... NOT CAUGHT
src/c.rs:2:5: replace one -> i32 with 1 ... NOT CAUGHT
9 mutants tested: 5 missed, 4 caught

