tests/cli/snapshots/cli__small_well_tested_mutants_with_cargo_arg_release.snap
---
source: tests/cli/main.rs
expression: stdout
---
Found 2 mutants to test
ok         Unmutated baseline
2 mutants tested: 2 caught

