tests/cli/snapshots/cli__small_well_tested_tree_is_clean.snap
---
source: tests/cli/main.rs
expression: stdout
---
Found 2 mutants to test
Unmutated baseline ... ok
src/lib.rs:5:5: replace factorial -> u32 with 0 ... caught
src/lib.rs:5:5: replace factorial -> u32 with 1 ... caught
2 mutants tested: 2 caught

